start adding linting

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
     working_directory: ~/project
     steps:
       - checkout
-      - make lint-step-manifests
+      - run: make lint-step-manifests
       #- run: TAG=${CIRCLE_TAG} BRANCH=${CIRCLE_BRANCH} make pushbase
       #- run: TAG=${CIRCLE_TAG} BRANCH=${CIRCLE_BRANCH} make pushall packall -j 8
       #- run: pyenv global 3.7.0
