--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,13 @@
 version: 2.1
 
 jobs:
+  lint-manifests:
+    machine:
+      image: ubuntu-1604:201903-01
+    working_directory: ~/project
+    steps:
+      - run: make lint-step-manifests
+
   build-test-push:
     machine:
       image: ubuntu-1604:201903-01
@@ -9,7 +16,6 @@ jobs:
     working_directory: ~/project
     steps:
       - checkout
-      - run: make lint-step-manifests
       #- run: TAG=${CIRCLE_TAG} BRANCH=${CIRCLE_BRANCH} make pushbase
       #- run: TAG=${CIRCLE_TAG} BRANCH=${CIRCLE_BRANCH} make pushall packall -j 8
       #- run: pyenv global 3.7.0
@@ -40,6 +46,10 @@ workflows:
   version: 2
   build_and_test:
     jobs:
+      - lint-manifests:
+        filters:
+          tags:
+            only: /.*/
       - build-test-push:
           filters:
             tags:
