--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,7 @@ jobs:
       image: ubuntu-1604:201903-01
     working_directory: ~/project
     steps:
+      - checkout
       - run: make lint-step-manifests
 
   build-test-push:
