--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
     working_directory: ~/project
     steps:
       - checkout
-      - run: TAG=${CIRCLE_TAG} BRANCH=${CIRCLE_BRANCH} make buildall
+      - run: TAG=${CIRCLE_TAG} BRANCH=${CIRCLE_BRANCH} make buildallbases buildall
       #- run: TAG=${CIRCLE_TAG} BRANCH=${CIRCLE_BRANCH} make pushbase
       #- run: TAG=${CIRCLE_TAG} BRANCH=${CIRCLE_BRANCH} make pushall packall -j 8
       #- run: pyenv global 3.7.0
@@ -56,6 +56,8 @@ workflows:
           filters:
             tags:
               only: /.*/
+            ignore: /pull\/[0-9]+/
+
       #- publish-manifest:
       #    context: development
       #    requires:
@@ -64,3 +66,5 @@ workflows:
       #      branches:
       #        only:
       #          master
+      #         ignore: /pull\/[0-9]+/
+
