--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,7 +56,8 @@ workflows:
           filters:
             tags:
               only: /.*/
-            ignore: /pull\/[0-9]+/
+            branches:
+              ignore: /pull\/[0-9]+/
 
       #- publish-manifest:
       #    context: development
