fixing base build

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
     working_directory: ~/project
     steps:
       - checkout
-      - run: TAG=${CIRCLE_TAG} BRANCH=${CIRCLE_BRANCH} make buildallbases buildall
+      - run: TAG=${CIRCLE_TAG} BRANCH=${CIRCLE_BRANCH} make buildallbases buildall -j 8
       #- run: TAG=${CIRCLE_TAG} BRANCH=${CIRCLE_BRANCH} make pushbase
       #- run: TAG=${CIRCLE_TAG} BRANCH=${CIRCLE_BRANCH} make pushall packall -j 8
       #- run: pyenv global 3.7.0
