Fix victorops manifests (#12)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -87,6 +87,7 @@ workflows:
           context: development
           requires:
             - build-manifests
+            - build
           filters:
             branches:
               only:
