--- a/steps/aws/redshift/data/utils/get-blocking-locks/.app.toml
+++ b/steps/aws/redshift/data/utils/get-blocking-locks/.app.toml
@@ -1,3 +1,3 @@
 
 name = "aws/redshift/data/utils/get-blocking-locks"
-includes = ["{{ .root }}/baur-includes/step.toml#build-step"]
+includes = ["{{ .root }}/baur-includes/step.toml#build-step-level-3"]
