--- a/steps/jenkins/get-build/manifest.yaml
+++ b/steps/jenkins/get-build/manifest.yaml
@@ -7,14 +7,6 @@ metadata:
   type: remediation
 
 envs:
-  - name: USERNAME
-    description: "Username for login."
-    required: true
-    type: "string"
-  - name: PASSWORD
-    required: true
-    description: "Password for login."
-    type: "string"
   - name: HOST
     description: "Jenkins host."
     required: true
@@ -51,3 +43,6 @@ outputs:
     type: "json"
     example: |
       {"api_object":{"Actions":[{"parameters":[{"Name":"DECK_ID","Value":"9ccae8sl8s2c"}],"causes":null,"buildsByBranchName":null,"lastBuiltRevision":{"SHA1":"","branch":null},"remoteUrls":null,"scmName":"","mercurialNodeName":"","mercurialRevisionNumber":"","subdir":null,"TotalCount":0,"UrlName":""},{"parameters":null,"causes":[{"_class":"hudson.model.Cause$UserIdCause","shortDescription":"Started by user admin","userId":"admin","userName":"admin"}],"buildsByBranchName":null,"lastBuiltRevision":{"SHA1":"","branch":null},"remoteUrls":null,"scmName":"","mercurialNodeName":"","mercurialRevisionNumber":"","subdir":null,"TotalCount":0,"UrlName":""}],"artifacts":[],"building":false,"builtOn":"","changeSet":{"items":[],"kind":"","revision":null},"changeSets":null,"culprits":[],"description":null,"duration":11492,"estimatedDuration":11306,"executor":null,"displayName":"#19","fullDisplayName":"Draw a Card #19","id":"19","keepLog":false,"number":19,"queueId":92,"result":"SUCCESS","timestamp":1613950462939,"url":"http://localhost:8080/job/Draw%20a%20Card/19/","mavenArtifacts":null,"mavenVersionUsed":"","FingerPrint":null,"runs":null}}
+
+integrations:
+  - jenkins
