--- a/steps/aws/detach-volume/manifest.yaml
+++ b/steps/aws/detach-volume/manifest.yaml
@@ -32,5 +32,31 @@ args:
     type: "string"
     default: "--force"
 
+outputs:
+  - name: AttachTime
+    description: "The time stamp when the attachment initiated."
+    type: string
+    example: 2021-03-30T21:01:05.123Z
+  - name: InstanceId
+    description: "The ID of the instance."
+    type: string
+    example: i-01474ef662b89480
+  - name: VolumeId
+    description: "The ID of the volume."
+    type: string
+    example: vol-1234567890abcdef0
+  - name: State
+    description: "The attachment state of the volume."
+    type: string
+    example: detaching
+  - name: Device
+    description: "The device name."
+    type: string
+    example: /dev/sdf
+  - name: DeleteOnTermination
+    description: "Indicates whether the EBS volume is deleted on instance termination."
+    type: bool
+    example: true
+
 integrations:
   - aws
