Revert "[SP-4809] Adding AWS output examples (#24) and #22" (#25)
* Revert "[SP-4809] Adding AWS output examples (#24)"

This reverts commit a952aef168df1512ad11ace8a6db3d4624b2f53b.

* Revert "[SP-4809] Add github steps output examples (#22)"

This reverts commit a8245af41ab3a9227cb7f269b834cb05dea2b5ac.

Co-authored-by: igorkheif <igor.kheifetz@stackpulse.com>

--- a/steps/aws/redshift/data/utils/get-blocking-locks/manifest.yaml
+++ b/steps/aws/redshift/data/utils/get-blocking-locks/manifest.yaml
@@ -55,7 +55,7 @@ envs:
 
 outputs:
   - name: results
-    description: "JSON array of query results. For more information see https://github.com/awslabs/utils/blob/master/src/AdminViews/v_get_blocking_locks.sql."
+    description: "JSON array of query results. For more information see https://github.com/awslabs/utils/blob/master/src/AdminViews/v_get_blocking_locks.sql"
     type: json
     example: |
       [{"block_sec":"59.4","max_sec_blocking":"56.4","num_blocking":"1","pid":"30432","pidlist":"30433","querytxt":"ALTER TABLE items ADD COLUMN last_update timestamptz;","username":"awsuser","xid":"722986"}]
