[SP-4809] ReAdd github steps output examples  (#27)
* Fixing github's output examples as well as the github/commit step a bit

* Adding the github_token integration to the github manifests instead of the token env var

* Revert "Adding the github_token integration to the github manifests instead of the token env var"

This reverts commit ba034b7ebc8910a27bad58abdadf7b968f3217ea.

* Some tiny fixes for github's manifests

Co-authored-by: igorkheif <igor.kheifetz@stackpulse.com>

--- a/steps/github/get-repos/manifest.yaml
+++ b/steps/github/get-repos/manifest.yaml
@@ -22,7 +22,7 @@ envs:
     example: "private"
 
 outputs:
-  - name: repositories
+  - name: Repositories
     description: "Array of strings containing repository names."
     type: "json"
     example: '["service-1","service-2"]'
