SP-5602: fix incident war room (#35)
* fix

* better description

--- a/steps/stackpulse/incident/create/manifest.yaml
+++ b/steps/stackpulse/incident/create/manifest.yaml
@@ -45,22 +45,21 @@ envs:
     default: "internal"
     example: "customer"
   - name: SLACK_WAR_ROOM_NAME
-    description: "New Slack War Room name (specify without '#')."
+    description: "New Slack War Room name (specify without '#'), requires slack integration."
     type: string
     example: "inc-0005-war-room"
+    required: false
   - name: SLACK_WAR_ROOM_CHANNEL_ID
     description: "A valid Slack channel id."
     type: string
+    required: false
   - name: SLACK_WAR_ROOM_TEAM_ID
     description: "New Slack War Room team id."
     type: string
+    required: false
 
 outputs:
   - name: incident_id
     description: "The created incident id."
     type: "string"
     example: "INC-00247"
-
-
-integrations:
-  - slack
