[SP-5906] Support heapdump runtime (#39)
* use the steps-sdk storage instead of local one

* support runtime

* rename step

* remove unused logs

* remove unused imports

* upgrade steps-sdk

* fix local path

* add the base kubectl command

* fix jattach path

* cr fixes

* use %q

* go mod tidy

* ignore format'

* ignore format for the exec command also

* add ignore format also to the base command

* set the RUNTIME as required

--- a/steps/kubectl/heapdump/Dockerfile
+++ b/steps/kubectl/heapdump/Dockerfile
@@ -1,6 +1,6 @@
 # Globals
 ARG BASEDIR=/go/src/github.com/stackpulse
-ARG BINARY_NAME=jattach-heapdump
+ARG BINARY_NAME=heapdump
 ARG CURRENT_BRANCH
 ARG STEP_BASEPATH
 
