SP-5826 GitHub base & get-file (#30)
* github base + get-file

* regex in replace string, github create pull request step

* kubectl apply - fix

* manifests

--- a/steps/utils/replace-string/manifest.yaml
+++ b/steps/utils/replace-string/manifest.yaml
@@ -2,7 +2,7 @@ apiVersion: stackpulse.io/v1
 kind: Step
 metadata:
   name: "replace_string"
-  description: "This step replaces sub-string by another sub-string for give base64 string."
+  description: "This step replaces sub-string or a regular expression by another sub-string for a given base64 string."
   vendor: custom
   type: custom
 
@@ -19,3 +19,6 @@ envs:
     description: "The sub-string to replace with."
     type: "string"
     required: true
+  - name: REGEX
+    type: bool
+    description: "Whether the sub string source (SUB_STR_SRC) is a regular expression or not."
