Add timeout to AWS and GCP SSH steps (#42)

--- a/steps/ssh/ssh-command-gcloud-secret/manifest.yaml
+++ b/steps/ssh/ssh-command-gcloud-secret/manifest.yaml
@@ -4,7 +4,7 @@ metadata:
   name: "ssh_command_with_gcloud_secret"
   description: "Connect to remote SSH server, authenticating with a content of Google Cloud Secret, and execute command(s)"
   vendor: gcp
-  type: remediation 
+  type: remediation
 
 envs:
   - name: SSH_KEY_SECRET_NAME
@@ -12,12 +12,16 @@ envs:
     type: "string"
   - name: SSH_CLIENT
     description: "Address of the server to connect to, i.e. user@destination:port"
-    type: "string"    
+    type: "string"
   - name: SSH_COMMAND
     description: "One (or multiple, separated with a semicolon) command(s) to execute"
-    type: "string"    
+    type: "string"
   - name: INTEGRATION_TYPE_GCLOUD
     description: "A Google Cloud integration having a role to access Google Cloud Secrets Manager (alternatively - AUTH_CODE for Base64-encoded GCP Service Account Token)"
     type: secret
     required: true
-    
+  - name: CONNECTION_TIMEOUT
+    description: "Timeout for SSH connection in seconds"
+    required: true
+    type: "int"
+    default: "30"
