SP-5769-invite-bots (#43)
* SP-5769-invite-bots

* Update steps/slack/channel/create/manifest.yaml

Co-authored-by: Hagai Shapira <hagais@stackpulse.io>

* Update steps/slack/channel/invite/manifest.yaml

Co-authored-by: Hagai Shapira <hagais@stackpulse.io>

Co-authored-by: Hagai Shapira <hagais@stackpulse.io>

--- a/steps/slack/channel/create/manifest.yaml
+++ b/steps/slack/channel/create/manifest.yaml
@@ -18,6 +18,10 @@ envs:
     description: "A comma separated list of user emails to invite to the new channel."
     type: string
     example: "luna@stackpulse.io,asher@stackpulse.io,avery@stackpulse.io"
+  - name: BOTS
+    description: "A comma separated list of bot users to invite to the channel. Could be either the bot name starting with @, or the bot ID."
+    type: string
+    example: "@geekbot,U017A33VD53"
   - name: TOPIC
     description: "The topic to be set for the new created channel."
     type: string
