[SP-5965] Add rich output to k8s troubleshoot (#49)
* Add rich output to k8s troubleshoot

* update base tag

--- a/steps/kubectl/troubleshoot/Dockerfile
+++ b/steps/kubectl/troubleshoot/Dockerfile
@@ -5,7 +5,7 @@ ARG CURRENT_BRANCH
 ARG STEP_BASEPATH
 
 # 1. Base
-FROM us-docker.pkg.dev/stackpulse/public/kubectl/base:$CURRENT_BRANCH AS base
+FROM us-docker.pkg.dev/stackpulse/public/kubectl/base:1.0.0 AS base
 
 # 2. Builder
 FROM golang:1.14-alpine as builder
