SP-5978 / Improve logging in step build process (#47)
* SP-5978 / Improve logging in step build process

* Fix python styling for format strings

* Small fix

* Update readme

* Try with python3 base image

* Python3

* Without python3 prefix

* Add logger to base

--- a/baur-includes/step.toml
+++ b/baur-includes/step.toml
@@ -10,7 +10,7 @@
     include_id = "build-step"
 
     # Command to execute.
-    command = ["python", "{{ .root }}/scripts/builder/build_step.py"]
+    command = ["{{ .root }}/scripts/builder/build_step.py"]
 
     # Inputs that are tracked to detect if a task needs to be run.
     [Task.Input]
@@ -46,7 +46,7 @@
     include_id = "build-step-level-2"
 
     # Command to execute.
-    command = ["python", "{{ .root }}/scripts/builder/build_step.py"]
+    command = ["{{ .root }}/scripts/builder/build_step.py"]
 
     # Inputs that are tracked to detect if a task needs to be run.
     [Task.Input]
@@ -85,7 +85,7 @@
     include_id = "build-step-level-3"
 
     # Command to execute.
-    command = ["python", "{{ .root }}/scripts/builder/build_step.py"]
+    command = ["{{ .root }}/scripts/builder/build_step.py"]
 
     # Inputs that are tracked to detect if a task needs to be run.
     [Task.Input]
