Fix broken build

--- a/steps/gcloud/cmd/manifest.yaml
+++ b/steps/gcloud/cmd/manifest.yaml
@@ -5,7 +5,7 @@ metadata:
   description: "Generic Gcloud CLI command"
   vendor: gcp
   type: advanced
-  version: "1.0.0"
+  version: 1.0.0
 
 envs:
   - name: COMMAND
