add-force-flag-kubectl-delete-manifest (#54)
* add-force-flag-kubectl-delete-manifest

* add-force-flag-kubectl-delete-manifest

* Update steps/kubectl/delete/manifest.yaml

Co-authored-by: Hagai Shapira <hagais@stackpulse.io>

Co-authored-by: Hagai Shapira <hagais@stackpulse.io>

--- a/steps/kubectl/delete/Dockerfile
+++ b/steps/kubectl/delete/Dockerfile
@@ -1,11 +1,12 @@
 # Globals
+ARG BASE_BRANCH=1.0.0
 ARG BASEDIR=/go/src/github.com/stackpulse
 ARG BINARY_NAME=delete
 ARG CURRENT_BRANCH
 ARG STEP_BASEPATH
 
 # 1. Base
-FROM us-docker.pkg.dev/stackpulse/public/kubectl/base:$CURRENT_BRANCH AS base
+FROM us-docker.pkg.dev/stackpulse/public/kubectl/base:$BASE_BRANCH AS base
 
 # 2. Builder
 FROM golang:1.14-alpine as builder
