document max timeout (#57)

--- a/steps/slack/message/interactive/manifest.yaml
+++ b/steps/slack/message/interactive/manifest.yaml
@@ -40,7 +40,7 @@ envs:
     required: true
     example: "Are you sure?"
   - name: TIMEOUT
-    description: "The time to wait for the user response (In Golang Duration format), if the timeout expires the default response will be used. default is 10 minutes."
+    description: "The time to wait for the user response (In Golang Duration format), if the timeout expires the default response will be used. Default is 10 minutes and maximum is 25 minuets on the StackPulse cloud runner."
     type: string
     required: false
     example: "2m"
